# Hyper

./: .eslintrc.json  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  library.h  package-lock.json  package.json  test.cpp  tsconfig.json
.github/workflows/: node.js.yml
dev/: inode.bat  inode.sh
docs/: README.md
docs/root/: Overview_of_HyperJS.md
examples/: package.json
examples/cli/: hyperjs.ini  hyperjs.ts  package-lock.json  package.json  plugins.ts
examples/cli/.hyperjs/daemon/: config.cjs  config.mjs
examples/cli/Users/XFaon/CLionProjects/Hyper/examples/cli/: hyperjs.ts
examples/cli/scheme/daemon/: config.mjs
examples/merge/: index.js
examples/react-tests/: index.html  package-lock.json  package.json  vitejs.config.ts
examples/react-tests/src/: index.tsx
examples/terminal/anime/: _service.js  basic.js
examples/ts-import/: basic.js  conf.ts  my.ts
examples/ts-import/.cache/: my.js
include/Hyper/: JSON.h  StringUtil.h  Terminal.h
react/: package-lock.json  package.json
react/src/: index.ts
react/src/controls/: theme.scss
react/src/controls/button/: Button.module.scss  Button.tsx  Props.ts
react/src/controls/input/: Input.module.scss  Input.tsx  Props.ts
react/src/controls/panel/: Panel.tsx  Props.ts
react/src/hooks/: usePlatformType.ts
scratch/: CMakeLists.txt  test.cxx
scripts/: jsDocCheck.js  watch.js
scripts/util/: getAllPackages.js  getProjectPackage.js  log.js
src/: library.cxx
src/json/: JSON.cxx
src/stringUtil/: StringUtil.cxx  StringUtil.h
src/terminal/: Terminal.cxx  Terminal.h
